--- a/index.html
+++ b/index.html
@@ -20,23 +20,91 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
 <div class="wrapper">
   <div class="maincontent">
     <section class="section hero">
-      <div class="container hero__container">
+      <div class="container hero__wrapper">
         <header class="header">
-          <div class="header__logo">
-            <a href="#" class="logo">
-              <img src="/images/logo/logo.png" alt="" class="logo__img">
-            </a>
+          <div class="logo">
+            <img src="images/logo/logo.png" alt="Logo image" class="logo__img">
           </div>
-          <div class="header__menu">
-
-          </div>
-          <div class="header__btn">
-            <a href="#" class="order__link" data-goto="6">
+          <div class="header__btns">
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__items">
+                  <a href="#" class="nav__link">
+                    О нас
+                  </a>
+                </li>
+                <li class="nav__items">
+                  <a href="#" class="nav__link">
+                    Бургеры
+                  </a>
+                </li>
+                <li class="nav__items">
+                  <a href="" class="nav__link">
+                    Команда
+                  </a>
+                </li>
+                <li class="nav__items">
+                  <a href="#" class="nav__link">
+                    Меню
+                  </a>
+                </li>
+                <li class="nav__items">
+                  <a href="#" class="nav__link">
+                    Отзывы
+                  </a>
+                </li>
+                <li class="nav__items">
+                  <a href="#" class="nav__link">
+                    Контакты
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <a href="#" class="order__btn">
               Заказать
             </a>
           </div>
         </header>
+        <div class="hero__container">
+          <div class="hero__present">
+            <div class="hero__img">
+              <img src="images/img/burger_hero.png" alt="super-burger" class="hero__img-pic">
+            </div>
+            <div class="hero__text">
+              <div class="hero__title">
+                мы делаем
+              </div>
+              <div class="hero__desc">
+                натуральные бургеры
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="hero__container-arrow">
+          <img src="images/arrow-scroll.png" alt="" class="hero__container-arrow__pic">
+        </div>
       </div>
+    </section>
+    <section class="section">
+
+    </section>
+    <section class="section">
+
+    </section>
+    <section class="section">
+
+    </section>
+    <section class="section">
+
+    </section>
+    <section class="section">
+
+    </section>
+    <section class="section">
+
+    </section>
+    <section class="section">
+
     </section>
   </div>
 </div>
