--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
                 </li>
               </ul>
             </nav>
-            <a href="#" class="order__btn">
+            <a href="#" class="btns">
               Заказать
             </a>
           </div>
@@ -71,7 +71,7 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
               <img src="images/img/burger_hero.png" alt="super-burger" class="hero__img-pic">
             </div>
             <div class="hero__text">
-              <div class="hero__title">
+              <div class="section-title hero__title">
                 мы делаем
               </div>
               <div class="hero__desc">
@@ -85,7 +85,56 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
         </div>
       </div>
     </section>
-    <section class="section">
+
+    <!--best -->
+
+    <section class="section best">
+      <div class="container">
+       <div class="section-title best__title">
+        мы лучшие
+       </div>
+        <ul class="best__list">
+          <li class="best__item">
+            <div class="best__pic">
+              <svg class="svg__icon svg__icon_best-meat">
+                <use xlink:href="images/svg/sprite/sprite.svg#meat"></use>
+              </svg>
+            </div>
+            <div class="best__title-item">
+              100% свежее мясо
+            </div>
+            <p>
+              Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+            <p>
+          </li>
+          <li class="best__item">
+            <div class="best__pic">
+              <svg class="svg__icon svg__icon_best-hand">
+                <use xlink:href="images/svg/sprite/sprite.svg#hand"></use>
+              </svg>
+            </div>
+            <div class="best__title-item">
+              Ручная сборка
+            </div>
+            <p>
+              Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.
+            <p>
+          </li>
+          <li class="best__item">
+            <div class="best__pic">
+              <svg class="svg__icon svg__icon_best-natural">
+                <use xlink:href="images/svg/sprite/sprite.svg#natural"></use>
+              </svg>
+            </div>
+            <div class="best__title-item">
+              Натуральные ингридиенты
+            </div>
+            <p>
+              Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+            <p>
+          </li>
+        </ul>
+      </div>
 
     </section>
     <section class="section">
