--- a/index.html
+++ b/index.html
@@ -137,12 +137,124 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
       </div>
 
     </section>
-    <section class="section">
+
+              <!--goods-->
+
+    <section class="section goods">
+      <div class="container">
+
+      </div>
+    </section>
+
+              <!--team-->
+
+    <section class="section team">
+      <div class="team__section">
+        <div class="team__content">
+          <div class="section-title team__title">
+            команда
+          </div>
+          <ul class="team-acco">
+            <li class="team-acco_item ">
+              <div class="team-acco__title">
+                Даниэл Редклифф
+              </div>
+              <div class="team-acco__content">
+                <div class="team-acco__image">
+                  <div class="team-acco__avatar">
+                    <img src="images/img/team-acco__avatar-pic.png" alt="" class="team-acco__avatar-pic">
+                  </div>
+                </div>
+                <div class="team-acco__desc">
+                  <div class="team-acco__occ">
+                    Оператор
+                  </div>
+                  <div class="team-acco__text">
+                    <p>
+                      С радостью поможет подобрать идеальный бургер и оформить заказ.
+                    </p>
+                  </div>
+
+                </div>
+              </div>
+            </li>
+            <li class="team-acco_item active">
+              <div class="team-acco__title">
+                Даниэл Редклифф
+              </div>
+              <div class="team-acco__content">
+                <div class="team-acco__image">
+                  <div class="team-acco__avatar">
+                    <img src="images/img/team-acco__avatar-pic.png" alt="" class="team-acco__avatar-pic">
+                  </div>
+                </div>
+                <div class="team-acco__desc">
+                  <div class="team-acco__occ">
+                    Оператор
+                  </div>
+                  <div class="team-acco__text">
+                    <p>
+                      С радостью поможет подобрать идеальный бургер и оформить заказ.
+                    </p>
+                  </div>
+
+                </div>
+              </div>
+            </li>
+            <li class="team-acco_item">
+              <div class="team-acco__title">
+                Даниэл Редклифф
+              </div>
+              <div class="team-acco__content">
+                <div class="team-acco__image">
+                  <div class="team-acco__avatar">
+                    <img src="images/img/team-acco__avatar-pic.png" alt="" class="team-acco__avatar-pic">
+                  </div>
+                </div>
+                <div class="team-acco__desc">
+                  <div class="team-acco__occ">
+                    Оператор
+                  </div>
+                  <div class="team-acco__text">
+                    <p>
+                      С радостью поможет подобрать идеальный бургер и оформить заказ.
+                    </p>
+                  </div>
+
+                </div>
+              </div>
+            </li>
+            <li class="team-acco_item">
+              <div class="team-acco__title">
+                Даниэл Редклифф
+              </div>
+              <div class="team-acco__content">
+                <div class="team-acco__image">
+                  <div class="team-acco__avatar">
+                    <img src="images/img/team-acco__avatar-pic.png" alt="" class="team-acco__avatar-pic">
+                  </div>
+                </div>
+                <div class="team-acco__desc">
+                  <div class="team-acco__occ">
+                    Оператор
+                  </div>
+                  <div class="team-acco__text">
+                    <p>
+                      С радостью поможет подобрать идеальный бургер и оформить заказ.
+                    </p>
+                  </div>
+
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
 
     </section>
-    <section class="section">
 
-    </section>
+
+
     <section class="section">
 
     </section>
