flexbox webinar end'ed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
                 </li>
               </ul>
             </nav>
-            <a href="#" class="btns">
+            <a href="#" class="btns hero__btns">
               Заказать
             </a>
           </div>
@@ -105,7 +105,7 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
             </div>
             <p>
               Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
-            <p>
+            </p>
           </li>
           <li class="best__item">
             <div class="best__pic">
@@ -118,7 +118,7 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
             </div>
             <p>
               Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.
-            <p>
+            </p>
           </li>
           <li class="best__item">
             <div class="best__pic">
@@ -131,7 +131,7 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
             </div>
             <p>
               Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
-            <p>
+            </p>
           </li>
         </ul>
       </div>
@@ -155,11 +155,11 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
             команда
           </div>
           <ul class="team-acco">
-            <li class="team-acco_item ">
+            <li class="team-acco_item active">
               <div class="team-acco__title">
                 Даниэл Редклифф
               </div>
-              <div class="team-acco__content">
+              <div class="team-acco__content ">
                 <div class="team-acco__image">
                   <div class="team-acco__avatar">
                     <img src="images/img/team-acco__avatar-pic.png" alt="" class="team-acco__avatar-pic">
@@ -178,7 +178,7 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
                 </div>
               </div>
             </li>
-            <li class="team-acco_item active">
+            <li class="team-acco_item">
               <div class="team-acco__title">
                 Даниэл Редклифф
               </div>
@@ -253,21 +253,219 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
 
     </section>
 
+              <!--Menu-->
 
+    <section class="section menu">
+
+    </section>
+
+              <!--Reviews-->
+
+    <section class="section reviews">
+      <ul class="reviews__list">
+        <li class="reviews__item" style="background-image: url(images/img/reviews/1.jpg);">
+
+          <div class="reviews__hover">
+            <div class="reviews__hover-content">
+              <div class="reviews__hover-title">
+                Константин Спилберг
+              </div>
+              <div class="reviews__hover-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias architecto aspernatur atque autem consectetur cupiditate doloribus esse est excepturi exercitationem explicabo.
+              </div>
+              <div class="reviews__hover-btn ">
+                <a href="#" class="btns reviews__btn">Подробнее</a>
+              </div>
+            </div>
+
+          </div>
+        </li>
+        <li class="reviews__item" style="background-image: url(images/img/reviews/2.jpg);">
+
+          <div class="reviews__hover">
+            <div class="reviews__hover-content">
+              <div class="reviews__hover-title">
+                Константин Спилберг
+              </div>
+              <div class="reviews__hover-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias architecto aspernatur atque autem consectetur cupiditate doloribus esse est excepturi exercitationem explicabo.
+              </div>
+              <div class="reviews__hover-btn ">
+                <a href="#" class="btns reviews__btn">Подробнее</a>
+              </div>
+            </div>
+
+          </div>
+        </li>
+        <li class="reviews__item" style="background-image: url(images/img/reviews/3.jpg);">
+
+          <div class="reviews__hover">
+            <div class="reviews__hover-content">
+              <div class="reviews__hover-title">
+                Константин Спилберг
+              </div>
+              <div class="reviews__hover-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias architecto aspernatur atque autem consectetur cupiditate doloribus esse est excepturi exercitationem explicabo.
+              </div>
+              <div class="reviews__hover-btn ">
+                <a href="#" class="btns reviews__btn">Подробнее</a>
+              </div>
+            </div>
+
+          </div>
+        </li>
+        <li class="reviews__item" style="background-image: url(images/img/reviews/4.jpg);">
+
+          <div class="reviews__hover">
+            <div class="reviews__hover-content">
+              <div class="reviews__hover-title">
+                Константин Спилберг
+              </div>
+              <div class="reviews__hover-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias architecto aspernatur atque autem consectetur cupiditate doloribus esse est excepturi exercitationem explicabo.
+              </div>
+              <div class="reviews__hover-btn ">
+                <a href="#" class="btns reviews__btn">Подробнее</a>
+              </div>
+            </div>
+
+          </div>
+        </li>
+        <li class="reviews__item" style="background-image: url(images/img/reviews/5.jpg);">
+
+          <div class="reviews__hover">
+            <div class="reviews__hover-content">
+              <div class="reviews__hover-title">
+                Константин Спилберг
+              </div>
+              <div class="reviews__hover-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias architecto aspernatur atque autem consectetur cupiditate doloribus esse est excepturi exercitationem explicabo.
+              </div>
+              <div class="reviews__hover-btn ">
+                <a href="#" class="btns reviews__btn">Подробнее</a>
+              </div>
+            </div>
+
+          </div>
+        </li>
+        <li class="reviews__item" style="background-image: url(images/img/reviews/6.jpg);">
+
+          <div class="reviews__hover">
+            <div class="reviews__hover-content">
+              <div class="reviews__hover-title">
+                Константин Спилберг
+              </div>
+              <div class="reviews__hover-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias architecto aspernatur atque autem consectetur cupiditate doloribus esse est excepturi exercitationem explicabo.
+              </div>
+              <div class="reviews__hover-btn ">
+                <a href="#" class="btns reviews__btn">Подробнее</a>
+              </div>
+            </div>
+
+          </div>
+        </li>
+        <li class="reviews__item" style="background-image: url(images/img/reviews/7.jpg);">
+
+          <div class="reviews__hover">
+            <div class="reviews__hover-content">
+              <div class="reviews__hover-title">
+                Константин Спилберг
+              </div>
+              <div class="reviews__hover-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias architecto aspernatur atque autem consectetur cupiditate doloribus esse est excepturi exercitationem explicabo.
+              </div>
+              <div class="reviews__hover-btn ">
+                <a href="#" class="btns reviews__btn">Подробнее</a>
+              </div>
+            </div>
+
+          </div>
+        </li>
+        <li class="reviews__item" style="background-image: url(images/img/reviews/8.jpg);">
+
+          <div class="reviews__hover">
+            <div class="reviews__hover-content">
+              <div class="reviews__hover-title">
+                Константин Спилберг
+              </div>
+              <div class="reviews__hover-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci alias architecto aspernatur atque autem consectetur cupiditate doloribus esse est excepturi exercitationem explicabo.
+              </div>
+              <div class="reviews__hover-btn ">
+                <a href="#" class="btns reviews__btn">Подробнее</a>
+              </div>
+            </div>
+
+          </div>
+        </li>
+
+      </ul>
+    </section>
+
+                <!-- Delivery-->
+
+    <section class="section order">
+      <div class="container">
+        <div class="section-title section__title_order">
+          закажите доставку
+        </div>
+        <div class="form">
+          <form action="">
+            <div class="form__row form__row_double">
+              <input type="text" class="form__input">
+              <input type="text" class="form__input">
+            </div>
+            <div class="form__row">
+              <input type="text" class="form__input">
+            </div>
+            <div class="form__row form__row_quattro">
+              <input type="text" class="form__input">
+              <input type="text" class="form__input">
+              <input type="text" class="form__input">
+              <input type="text" class="form__input">
+            </div>
+          </form>
+        </div>
+      </div>
+
+    </section>
+
+                <!--Map-->
 
     <section class="section">
 
     </section>
-    <section class="section">
 
-    </section>
-    <section class="section">
 
-    </section>
-    <section class="section">
-
-    </section>
   </div>
 </div>
+<ul class="fixed__menu">
+  <li class="fixed-menu__item active">
+    <a href="" class="fixed-menu_link"></a>
+  </li>
+  <li class="fixed-menu__item">
+    <a href="" class="fixed-menu_link"></a>
+  </li>
+  <li class="fixed-menu__item">
+    <a href="" class="fixed-menu_link"></a>
+  </li>
+  <li class="fixed-menu__item">
+    <a href="" class="fixed-menu_link"></a>
+  </li>
+  <li class="fixed-menu__item">
+    <a href="" class="fixed-menu_link"></a>
+  </li>
+  <li class="fixed-menu__item">
+    <a href="" class="fixed-menu_link"></a>
+  </li>
+  <li class="fixed-menu__item">
+    <a href="" class="fixed-menu_link"></a>
+  </li>
+  <li class="fixed-menu__item">
+    <a href="" class="fixed-menu_link"></a>
+  </li>
+</ul>
+
 </body>
 </html>
