--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/app.css">
@@ -81,7 +81,10 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
           </div>
         </div>
         <div class="hero__container-arrow">
-          <img src="images/arrow-scroll.png" alt="" class="hero__container-arrow__pic">
+          <!--<img src="images/arrow-scroll.png" alt="" class="hero__container-arrow__pic">-->
+          <svg class="arrow-scroll arrow-scroll_down">
+            <use xlink:href="images/svg/sprite/sprite.svg#arrow-scroll"></use>
+          </svg>
         </div>
       </div>
     </section>
@@ -141,9 +144,38 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
               <!--goods-->
 
     <section class="section goods">
-      <div class="container">
+      <div class="container goods__wrapper">
+        <div class="goods__present">
+          <div class="goods__img">
+            <img src="images/img/burger__goods-black.png" alt="black-burger" class="goods__img-pic">
+          </div>
+          <div class="goods__text">
+            <div class="section-title goods__title">
+              Dark BEEF Burger
+            </div>
+            <div class="goods__desc">
+              <p>
+                Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.
+              </p>
+            </div>
+            <div class="goods__price">
+              <div class="goods__price-summ">
+                500
+              </div>
+              <div class="goods__price-money">
+                рублей
+              </div>
+            </div>
 
+          </div>
+        </div>
       </div>
+      <svg class="arrow-scroll arrow-scroll_left">
+        <use xlink:href="images/svg/sprite/sprite.svg#arrow-scroll"></use>
+      </svg>
+      <svg class="arrow-scroll arrow-scroll_right">
+        <use xlink:href="images/svg/sprite/sprite.svg#arrow-scroll"></use>
+      </svg>
     </section>
 
               <!--team-->
