--- a/index.html
+++ b/index.html
@@ -148,6 +148,28 @@ chromeframe/?redirect=true">активируй Google Chrome Frame</a></p>
         <div class="goods__present">
           <div class="goods__img">
             <img src="images/img/burger__goods-black.png" alt="black-burger" class="goods__img-pic">
+            <div class="goods__const">
+              <svg class="goods__cost-img">
+                <use xlink:href="images/svg/sprite/sprite.svg#burger"></use>
+              </svg>
+              <div class="goods__const-hover">
+
+              </div>
+              <div class="goods__const-text">
+                состав
+              </div>
+            </div>
+            <div class="goods__kkal">
+              <svg class="goods__kkal-img">
+                <use xlink:href="images/svg/sprite/sprite.svg#kkal"></use>
+              </svg>
+              <div class="goods__kkal-text goods__kkal-num">
+                1200
+              </div>
+              <div class="goods__kkal-text goods__kkal-value">
+                kkal
+              </div>
+            </div>
           </div>
           <div class="goods__text">
             <div class="section-title goods__title">
